# todoapp-htmx-rust

./: Cargo.toml  index.html  tailwind.config.js  todos.db
migrations/: 20240612203250_create_todos_table.up.sql
public/: output.css
src/: main.rs  todo.rs
